# Julia_Toys

./: .gitignore  README.md  pyproject.toml  pytest.ini  ruff.toml
julia_toys/: db.sqlite3  manage.py
julia_toys/julia_toys/: asgi.py  settings.py  urls.py  wsgi.py
julia_toys/static/css/: style.css
julia_toys/templates/: base.html  index.html
julia_toys/templates/components/: footer.html  header.html
julia_toys/tests/: fixtures.py
julia_toys/tests/test_apps/test_toys/: test_views.py
julia_toys/toys/: admin.py  apps.py  models.py  urls.py  views.py
julia_toys/toys/migrations/: 0001_initial.py
julia_toys/toys/templates/: base.html  home.html
julia_toys/toys/templates/toys/: toys.html
