[project]
name = "julia-toys"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry Alexandrov",email = "alexandrov.dm91@gmail.com"}
]
license = {text = "Dmitry Alexandrov"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "django-bootstrap5 (>=25.2,<26.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "ruff (>=0.12.12,<0.13.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
