[project]
name = "julia-toys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-fakery>=4.1.3",
    "dotenv>=0.9.9",
    "pillow>=11.3.0",
    "polyfactory>=2.22.2",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "ruff>=0.13.3",
]
